[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/ui/battle/ActorDetailsPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/ui/icons/stats/defence.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/ui/icons/stats/attack.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/ui/icons/stats/move.png" type="Texture" id=5]
[ext_resource path="res://src/ui/SoundButton.gd" type="Script" id=6]
[ext_resource path="res://assets/graphics/ui/icons/stats/energy.png" type="Texture" id=7]

[node name="ActorDetailsPanel" type="PopupPanel"]
margin_right = 100.0
margin_bottom = 135.0
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 97.0
margin_bottom = 132.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="Container"]
margin_right = 94.0
margin_bottom = 30.0

[node name="PortraitContainer" type="PanelContainer" parent="Container/Header"]
margin_right = 30.0
margin_bottom = 30.0

[node name="Portrait" type="TextureRect" parent="Container/Header/PortraitContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 27.0
margin_bottom = 27.0
rect_min_size = Vector2( 24, 24 )

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Header"]
margin_left = 32.0
margin_top = 2.0
margin_right = 94.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Name" type="Label" parent="Container/Header/VBoxContainer"]
margin_right = 62.0
margin_bottom = 7.0
text = "Test"

[node name="Resources" type="GridContainer" parent="Container/Header/VBoxContainer"]
margin_top = 9.0
margin_right = 62.0
margin_bottom = 26.0
columns = 5

[node name="StaminaIcon" type="TextureRect" parent="Container/Header/VBoxContainer/Resources"]
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 3 )

[node name="StaminaLabel" type="Label" parent="Container/Header/VBoxContainer/Resources"]
margin_left = 9.0
margin_right = 39.0
margin_bottom = 7.0
text = "Stamina:"

[node name="CurrentStamina" type="Label" parent="Container/Header/VBoxContainer/Resources"]
margin_left = 40.0
margin_right = 48.0
margin_bottom = 7.0
text = "10"

[node name="Slash" type="Label" parent="Container/Header/VBoxContainer/Resources"]
margin_left = 49.0
margin_right = 53.0
margin_bottom = 7.0
text = "/"

[node name="MaxStamina" type="Label" parent="Container/Header/VBoxContainer/Resources"]
margin_left = 54.0
margin_right = 62.0
margin_bottom = 7.0
text = "10"

[node name="EnergyIcon" type="TextureRect" parent="Container/Header/VBoxContainer/Resources"]
margin_top = 9.0
margin_right = 8.0
margin_bottom = 17.0
texture = ExtResource( 7 )

[node name="EnergyLabel" type="Label" parent="Container/Header/VBoxContainer/Resources"]
margin_left = 9.0
margin_top = 9.0
margin_right = 39.0
margin_bottom = 16.0
text = "Energy:"

[node name="CurrentEnergy" type="Label" parent="Container/Header/VBoxContainer/Resources"]
margin_left = 40.0
margin_top = 9.0
margin_right = 48.0
margin_bottom = 16.0
text = "10"

[node name="Slash2" type="Label" parent="Container/Header/VBoxContainer/Resources"]
margin_left = 49.0
margin_top = 9.0
margin_right = 53.0
margin_bottom = 16.0
text = "/"

[node name="MaxEnergy" type="Label" parent="Container/Header/VBoxContainer/Resources"]
margin_left = 54.0
margin_top = 9.0
margin_right = 62.0
margin_bottom = 16.0
text = "10"

[node name="Stats" type="GridContainer" parent="Container"]
margin_left = 16.0
margin_top = 32.0
margin_right = 77.0
margin_bottom = 49.0
size_flags_horizontal = 4
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackIcon" type="TextureRect" parent="Container/Stats"]
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 4 )

[node name="AttackLabel" type="Label" parent="Container/Stats"]
margin_left = 9.0
margin_right = 33.0
margin_bottom = 7.0
text = "Attack:"

[node name="AttackValue" type="Label" parent="Container/Stats"]
margin_left = 34.0
margin_right = 42.0
margin_bottom = 7.0
text = "10"

[node name="AttackMod" type="Label" parent="Container/Stats"]
margin_left = 43.0
margin_right = 61.0
margin_bottom = 7.0
text = "(+10)"

[node name="MoveIcon" type="TextureRect" parent="Container/Stats"]
margin_top = 9.0
margin_right = 8.0
margin_bottom = 17.0
texture = ExtResource( 5 )

[node name="MoveLabel" type="Label" parent="Container/Stats"]
margin_left = 9.0
margin_top = 9.0
margin_right = 33.0
margin_bottom = 16.0
text = "Move:"

[node name="MoveValue" type="Label" parent="Container/Stats"]
margin_left = 34.0
margin_top = 9.0
margin_right = 42.0
margin_bottom = 16.0
text = "10"

[node name="MoveMod" type="Label" parent="Container/Stats"]
margin_left = 43.0
margin_top = 9.0
margin_right = 61.0
margin_bottom = 16.0
text = "(-10)"

[node name="ConditionsHeader" type="Label" parent="Container"]
margin_top = 51.0
margin_right = 94.0
margin_bottom = 58.0
text = "Conditions:"

[node name="NoConditions" type="Label" parent="Container"]
margin_left = 23.0
margin_top = 60.0
margin_right = 71.0
margin_bottom = 67.0
size_flags_horizontal = 4
size_flags_vertical = 2
text = "No conditions"

[node name="ConditionsScroll" type="ScrollContainer" parent="Container"]
visible = false
margin_top = 60.0
margin_right = 94.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Conditions" type="GridContainer" parent="Container/ConditionsScroll"]
margin_right = 94.0
size_flags_horizontal = 3
columns = 3

[node name="OK" type="Button" parent="Container"]
margin_left = 70.0
margin_top = 105.0
margin_right = 94.0
margin_bottom = 129.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 8
text = "OK"
script = ExtResource( 6 )
sound_type = 1

[connection signal="pressed" from="Container/OK" to="." method="_on_OK_pressed"]
